--- a/assets/styles.css
+++ b/assets/styles.css
@@ -3,7 +3,7 @@
     padding: 30px;
     font-size: 30px;
     border: 5px inset black;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0);
     transition-property: background-color;
     transition-duration: 0.2s;
   }
